--- a/style.css
+++ b/style.css
@@ -624,7 +624,88 @@ footer a:hover {
 
     #sm-banner .banner-box {
         min-width: 100%;
-        height: 30vh;
+        height: 40vh;
         padding: 80px 80px;
+    }
+
+    #banner3 {
+        padding: 0 40px;
+    }
+
+    #banner3 .banner-box {
+        width: 28%;
+    }
+
+    #sm-banner .banner-box2 {
+        margin-top: 20px;
+    }
+
+    #newsletter .form {
+        width: 70%;
+    }
+}
+
+@media(max-width:477px) {
+    .section-p1 {
+        padding: 20px;
+    }
+
+    #header {
+        padding: 10px 30px;
+    }
+
+    h1 {
+        font-size: 38px;
+    }
+
+    h2 {
+        font-size: 32px;
+    }
+
+    #hero {
+        padding: 0 20px;
+        background-position: 55%;
+    }
+
+    #feature {
+        justify-content: space-between;
+    }
+
+    #product1 .pro {
+        width: 100px;
+    }
+
+    #feature .fe-box {
+        width: 155px;
+        margin: 0 0 15px 0;
+    }
+
+    #sm-banner .banner-box {
+        min-width: 100%;
+        height: 50vh;
+    }
+
+    #sm-banner .banner-box2 {
+        margin-top: 20px;
+    }
+
+    #banner3 {
+        padding: 0 20px;
+    }
+
+    #banner3 .banner-box {
+        width: 100%;
+    }
+
+    #newsletter{
+        padding: 40px 20px
+    }
+
+    #newsletter .form{
+        width: 100%;
+    }
+
+    .copyright{
+        text-align: start;
     }
 }
